--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
                                         <th scope="col" class="px-6 py-3 text-center">Ahorro %</th>
                                         <th scope="col" class="px-6 py-3 text-center">RF %</th>
                                         <th scope="col" class="px-6 py-3 text-center">RV %</th>
-                                        <th scope="col" class="px-6 py-3 text-center">Metales %</th>
+                                        <th scope="col" class="px-6 py-3 text-center">Oro %</th>
+                                        <th scope="col" class="px-6 py-3 text-center">Plata %</th>
                                         <th scope="col" class="px-6 py-3 text-center">Cryptos %</th>
                                     </tr>
                                 </thead>
@@ -257,33 +258,33 @@
     <script>
     document.addEventListener('DOMContentLoaded', function () {
         // --- CONFIGURACIÓN INICIAL Y CONSTANTES ---
-        const ASSET_KEYS = ['ahorro', 'rf', 'rv', 'metales', 'cryptos'];
+        const ASSET_KEYS = ['ahorro', 'rf', 'rv', 'oro', 'plata', 'cryptos'];
         const ASSET_NAMES = {
-            ahorro: 'Ahorro', rf: 'Renta Fija', rv: 'Renta Variable', metales: 'Metales', cryptos: 'Cryptos'
+            ahorro: 'Ahorro', rf: 'Renta Fija', rv: 'Renta Variable', oro: 'Oro', plata: 'Plata', cryptos: 'Cryptos'
         };
         const ASSET_COLORS = {
             ahorro: 'rgba(153, 102, 255, 0.8)', rf: 'rgba(54, 162, 235, 0.8)', rv: 'rgba(255, 99, 132, 0.8)',
-            metales: 'rgba(255, 206, 86, 0.8)', cryptos: 'rgba(255, 159, 64, 0.8)',
+            oro: 'rgba(255, 215, 0, 0.8)', plata: 'rgba(192, 192, 192, 0.8)', cryptos: 'rgba(255, 159, 64, 0.8)',
             total: 'rgba(0, 0, 0, 1)',
             contributed: 'rgba(100, 100, 100, 0.7)'
         };
         const SCENARIOS = {
             manual: {},
             negativo: {
-                growth: { ahorro: 0.5, rf: 1.5, rv: 5.0, metales: 4, cryptos: 8.0 },
+                growth: { ahorro: 0.75, rf: 1.5, rv: 5.0, oro: 4, plata: 4.5, cryptos: 8.0 },
                 crises: [
-                    { id: Date.now() + 1, year: 4, month: 3, drops: { rv: 35, metales: 25, cryptos: 60 }, auto: true },
-                    { id: Date.now() + 2, year: 12, month: 9, drops: { rv: 25, metales: 15, cryptos: 40 }, auto: true }
+                    { id: Date.now() + 1, year: 4, month: 3, drops: { rv: 35, oro: 20, plata: 30, cryptos: 60 }, auto: true },
+                    { id: Date.now() + 2, year: 12, month: 9, drops: { rv: 25, oro: 12, plata: 18, cryptos: 40 }, auto: true }
                 ]
             },
             neutro: {
-                growth: { ahorro: 0.75, rf: 2.5, rv: 6.5, metales: 5, cryptos: 10.0 },
+                growth: { ahorro: 0.75, rf: 2.5, rv: 6.5, oro: 5, plata: 5.5, cryptos: 10.0 },
                 crises: [
-                    { id: Date.now() + 3, year: 7, month: 6, drops: { rv: 25, metales: 15, cryptos: 40 }, auto: true }
+                    { id: Date.now() + 3, year: 7, month: 6, drops: { rv: 25, oro: 12, plata: 18, cryptos: 40 }, auto: true }
                 ]
             },
             positivo: {
-                growth: { ahorro: 1.0, rf: 3.0, rv: 9.5, metales: 8.0, cryptos: 15.0 },
+                growth: { ahorro: 0.75, rf: 3.0, rv: 9.5, oro: 8.0, plata: 9.0, cryptos: 15.0 },
                 crises: []
             }
         };
@@ -330,7 +331,7 @@
                  <input type="number" id="rebalance-${key}-pct" class="w-full bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg p-2 text-center" value="0" min="0" max="100"></div>
             `).join('');
             
-            crisisContainer.innerHTML = ['rv', 'metales', 'cryptos'].map(key => `
+            crisisContainer.innerHTML = ['rv', 'oro', 'plata', 'cryptos'].map(key => `
                  <div><label for="crisis-caida-${key}" class="block mb-2 text-sm font-medium text-gray-700">${ASSET_NAMES[key]}</label>
                  <input type="number" id="crisis-caida-${key}" class="w-full bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg p-2.5" value="0" min="0" max="100"></div>
             `).join('');
@@ -541,13 +542,13 @@
         const openCrisisModalForEdit = (crisis) => {
             document.getElementById('crisis-ano').value = crisis ? crisis.year : 5;
             document.getElementById('crisis-mes').value = crisis ? crisis.month : 3;
-            ['rv', 'metales', 'cryptos'].forEach(key => {
+            ['rv', 'oro', 'plata', 'cryptos'].forEach(key => {
                 document.getElementById(`crisis-caida-${key}`).value = crisis && crisis.drops[key] ? crisis.drops[key] : 0;
             });
         };
         setupModal('crisis-modal', 'btn-add-crisis', 'crisis-save', 'crisis-cancel', () => {
             const drops = {};
-            ['rv', 'metales', 'cryptos'].forEach(key => {
+            ['rv', 'oro', 'plata', 'cryptos'].forEach(key => {
                 const value = parseFloat(document.getElementById(`crisis-caida-${key}`).value) || 0;
                 if (value > 0) drops[key] = value;
             });
@@ -843,6 +844,4 @@
 
 </body>
 </html>
-
-
 
